# clew

./: Cargo.toml  README.md
clew/: Cargo.toml  README.md
clew-derive/: Cargo.toml
clew-derive/src/: lib.rs
clew-desktop/: Cargo.toml
clew-desktop/src/: app.rs  keyboard.rs  window.rs  window_manager.rs
clew-tiny-skia/: Cargo.toml
clew-tiny-skia/src/: lib.rs
clew-vello/: Cargo.toml
clew-vello/src/: lib.rs
clew-widgets/: Cargo.toml
clew-widgets/src/: lib.rs
clew/examples/: animations.rs  counter.rs  groups.rs  shortcuts.rs  todo_list.rs  virtual_lists.rs  zindex.rs
clew/src/: animation.rs  foundation.rs  interaction.rs  io.rs  layout.rs  lib.rs  lifecycle.rs  render.rs  shortcuts.rs  state.rs  text.rs  text_data.rs  text_history.rs
clew/src/widgets/: builder.rs  button.rs  colored_box.rs  component.rs  decorated_box.rs  editable_text.rs  for_each.rs  frame.rs  gesture_detector.rs  hstack.rs  mod.rs  scroll_area.rs  shortcuts.rs  stateful.rs  svg.rs  text.rs  virtual_list.rs  vstack.rs  widget.rs  zstack.rs
clew/src/widgets/editable_text/: interaction.rs  mod.rs  render.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs  ui_kit.rs
tech-paws-ui/: Cargo.toml
tech-paws-ui-derive/: Cargo.toml
tech-paws-ui-derive/src/: lib.rs
tech-paws-ui-desktop/: Cargo.toml
tech-paws-ui-desktop/src/: app.rs  window.rs  window_manager.rs
tech-paws-ui-tiny-skia/: Cargo.toml
tech-paws-ui-tiny-skia/src/: lib.rs
tech-paws-ui-vello/: Cargo.toml
tech-paws-ui-vello/src/: lib.rs
tech-paws-ui/examples/: counter.rs  virtual_list.rs
tech-paws-ui/src/: assets.rs  foundation.rs  interaction.rs  io.rs  layout.rs  lib.rs  render.rs  state.rs  text.rs  widget_id.rs
tech-paws-ui/src/widgets/: builder.rs  button.rs  colored_box.rs  component.rs  decorated_box.rs  decoration.rs  gesture_detector.rs  hstack.rs  mod.rs  provider.rs  scope.rs  scroll_area.rs  svg.rs  text.rs  view.rs  virtual_list.rs  vstack.rs  widget.rs  zstack.rs
tech_paws_ui/: Cargo.toml
tech_paws_ui/src/: event_queue.rs  foundation.rs  interaction.rs  io.rs  layout.rs  lib.rs  render.rs  state.rs  task_spawner.rs  text.rs  widget_id.rs
tech_paws_ui/src/widgets/: builder.rs  button.rs  hstack.rs  mod.rs  scope.rs  view.rs  vstack.rs
tech_paws_ui_desktop/: Cargo.toml
tech_paws_ui_desktop/src/: app.rs  async_support.rs  lib.rs  window.rs  window_manager.rs
tech_paws_ui_tiny_skia/: Cargo.toml
tech_paws_ui_tiny_skia/src/: lib.rs
tech_paws_winit/: Cargo.toml
