[workspace]
resolver = "3"
members = [
    "tech-paws-ui",
    "tech-paws-ui-desktop",
    "tech-paws-ui-derive",
    "tech-paws-ui-tiny-skia",
    "tech-paws-ui-vello",
    "examples/hello_world",
]

[workspace.dependencies]
log = "0.4"
glam = "0.30"
slotmap = "1"
cosmic-text = { version = "0.14" }
raw-window-handle = "0.6"
winit = "0.30"
string-interner = "0.19"
parking_lot = "0.12"
once_cell = "1.21"
usvg = "0.45"
resvg = "0.45"
bumpalo = { version = "3.19", features = ["collections"] }
smallvec = "1.15.1"
profiling = "1.0"
tracy-client = "0.18.3"

[patch.crates-io]
# cosmic-text = { path = "/Users/sys.int64/dev/lib/cosmic-text" }
cosmic-text = { git = "https://github.com/tech-paws/cosmic-text.git", branch = "tech_paws" }
