[package]
name = "clew-tiny-skia"
version = "0.0.1"
edition = "2024"

[dependencies]
tiny-skia = "0.11"
softbuffer = "0.4"
clew = { path = "../clew" }
raw-window-handle = { workspace = true }
cosmic-text = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
profiling = { workspace = true }
tracy-client = { workspace = true }
