[package]
name = "clew-vello"
version = "0.0.1"
edition = "2024"

[dependencies]
vello = "0.6.0"
clew = { path = "../clew" }
cosmic-text = { workspace = true }
raw-window-handle = { workspace = true }
profiling = { workspace = true }
tracy-client = { workspace = true }
log = { workspace = true }
vello_svg = { version = "0.8" }
skrifa = "0.39.0"
