[package]
name = "tech-paws-ui-vello"
version = "0.1.0"
edition = "2024"

[dependencies]
vello = "0.6.0"
# glyphon = "0.10.0"
tech-paws-ui = { path = "../tech-paws-ui" }
cosmic-text = { workspace = true }
raw-window-handle = { workspace = true }
profiling = { workspace = true }
tracy-client = { workspace = true }
skrifa = "0.39.0"
