[package]
name = "tech-paws-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
glam = { workspace = true }
cosmic-text = { workspace = true }
slotmap = { workspace = true }
string-interner = { workspace = true }
usvg = { workspace = true }
bitflags = "2.10"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
puffin = "0.19.1"
bumpalo = { workspace = true }
smallvec = { workspace = true }
profiling = { workspace = true, features = ["profile-with-tracy"] }
tracy-client = { workspace = true }
rustc-hash = "2.1"
slab = "0.4.11"
bitvec = "1.0.1"

[features]
default = ["tokio"]
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }
clew-widgets = { path = "../clew-widgets" }
tech-paws-ui-desktop = { path = "../tech-paws-ui-desktop" }
tech-paws-ui-derive = { path = "../tech-paws-ui-derive" }
tech-paws-ui-vello = { path = "../tech-paws-ui-vello" }
profiling = { workspace = true }
tracy-client = { workspace = true }
log = { workspace = true }
env_logger = "0.10"
winit = { workspace = true }
pollster = "0.4.0"
