[package]
name = "tech_paws_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
glam = { workspace = true }
cosmic-text = { workspace = true }
slotmap = { workspace = true }
string-interner = { workspace = true }
bitflags = "2.10"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }

[features]
default = ["tokio"]
async = ["tokio"]
