[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
tech-paws-ui = { path = "../../tech-paws-ui" }
tech-paws-ui-desktop = { path = "../../tech-paws-ui-desktop" }
tech-paws-ui-tiny-skia = { path = "../../tech-paws-ui-tiny-skia" }
tech-paws-ui-derive = { path = "../../tech-paws-ui-derive" }

log = { workspace = true }
winit = { workspace = true }
env_logger = "0.10"
tokio = { version = "1.47.1", features = ["full"] }
