[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
tech-paws-ui = { path = "../../tech-paws-ui" }
clew-widgets = { path = "../../clew-widgets" }
tech-paws-ui-desktop = { path = "../../tech-paws-ui-desktop" }
tech-paws-ui-tiny-skia = { path = "../../tech-paws-ui-tiny-skia" }
tech-paws-ui-derive = { path = "../../tech-paws-ui-derive" }
tech-paws-ui-vello = { path = "../../tech-paws-ui-vello" }
puffin_http = "0.16.1"
puffin = "0.19.1"

log = { workspace = true }
winit = { workspace = true }
bumpalo = { workspace = true }
env_logger = "0.10"
tokio = { version = "1.47.1", features = ["full"] }
tracy-client = { workspace = true }
profiling = { workspace = true }
pollster = "0.4.0"
